2007-05-16  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c (tile_invalidate): if the invalidated
	tile is the cached tile, release the cached tile. Fixes bug #438802.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_sensitive):
	apply sensitivity state to the Cancel button as well.
	(gimp_file_dialog_progress_start): make the Cancel button sensitive
	if the progress is cancelable.

	* app/widgets/gimpthumbbox.c (gimp_thumb_box_progress_start): if
	embedded in a GimpFileDialog, make its Cancel button sensitive if
	the progress is cancelable

2007-05-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpthumbbox.[ch]: combined the two progress bars
	(when loading multiple thumbnails) into a single one using a
	GimpSubProgress.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/jpeg/jpeg-load.c: reduced number of progress updates.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c (script_fu_extension_init):
	renamed "Utils" to "Utilities".

2007-05-15  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/contactsheet.scm: Use 'img' and not
	'new-img' in make-thumbnail-size routine. Moved menu entry from
	Xtns/Utils to Xtns/Utilities. See bug #132532.

2007-05-15  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpheal.c (gimp_heal_motion): convert the source
	region to the dest region's type, not the other way around
	(using the wrong if() condition when doing so). Fixes bug #390938.

2007-05-15  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c (marshall_proc_db_call): Allow
	any number type in a vector to be passed in PDB call as an INT*ARRAY.
	Updated error messages accordingly. Fixes bug #435640.

2007-05-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c (browser_dialog_open): don't show
	the window yet. The user might not have the help pages installed.
