@@ -43,7 +43,6 @@ plug-ins/script-fu/scripts/clothify.scm
 plug-ins/script-fu/scripts/coffee.scm
 plug-ins/script-fu/scripts/comic-logo.scm
 plug-ins/script-fu/scripts/coolmetal-logo.scm
-plug-ins/script-fu/scripts/copy-visible.scm
 plug-ins/script-fu/scripts/crystal-logo.scm
 plug-ins/script-fu/scripts/difference-clouds.scm
 plug-ins/script-fu/scripts/distress-selection.scm
