@@ -1,5 +1,11 @@
 2007-05-16  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/scripts/selection-round.scm
+	* plug-ins/script-fu/scripts/copy-visible.scm: unmarked strings for
+	translation.
+
+2007-05-16  Sven Neumann  <sven@gimp.org>
+
 	* app/base/tile-manager.c (tile_invalidate): if the invalidated
 	tile is the cached tile, release the cached tile. Fixes bug #438802.
 
